--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:label="@string/app_name">
         <activity
             android:name=".SplashActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +19,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:launchMode="singleInstance"
             android:name=".MainActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" />
+        <activity
+            android:name=".MatchDetailActivity"
+            android:launchMode="singleInstance" />
     </application>
 </manifest>
